<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lucidsoftworksllc.taxidi.auth.viewmodels.AuthSignInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/auth_register_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/auth_welcome_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/auth_cardview_linearlayout"
                    style="@style/CardView.Dark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primaryColor"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:id="@+id/auth_register_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/padding_medium"
                        android:gravity="center"
                        android:text="@string/register_new_account"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="italic|bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_size"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_in_username"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_username"
                        android:inputType="textShortMessage"
                        android:text="@={viewModel.username}"
                        android:textColor="@color/white" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_size"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_in_email_address"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.emailAddress}"
                        android:textColor="@color/white" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_size"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/white" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_text2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_size"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password2"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password2}"
                        android:textColor="@color/white" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_frag_register_button"
                        android:backgroundTint="@color/secondaryDarkColor"
                        android:text="@string/register_text_next_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:onClick="@{() -> viewModel.validateRegisterCredentials()}"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/auth_register_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/purple_200"
                    android:visibility="gone"
                    tools:visibility="visible"
                    app:fadeVisible="@{viewModel.showLoading.booleanValue()}"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
