...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:hint="@string/register_authority_type">

                        <AutoCompleteTextView
                            android:id="@+id/auth_register2_autocomplete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:inputType="none"
                            />

...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:hint="@string/register_driver_type">

                        <AutoCompleteTextView
                            android:id="@+id/auth_register2_autocomplete_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:inputType="none"
                            />

...
